--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.18",
+    "@react-navigation/material-bottom-tabs": "^6.2.27",
     "@react-navigation/native": "^6.1.15",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
