--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.27",
     "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.6.7",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^4.0.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
