--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^4.0.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
