--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
