--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
-    "cSpell.words": [
-        "disponible",
-        "NOSONAR",
-        "Paginador",
-        "Prueba",
-        "TMDB"
-    ]
+  "cSpell.words": [
+    "constans",
+    "disponible",
+    "NOSONAR",
+    "Paginador",
+    "Prueba",
+    "Sombra",
+    "TMDB"
+  ]
 }
