🚀 [Optimization] - Handling and adding some improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
   "cSpell.words": [
+    "cargar",
     "constans",
+    "datos",
     "desconocido",
     "disponible",
     "NOSONAR",
+    "Ocurrió",
     "Paginador",
     "Prueba",
+    "Reutiliza",
+    "serie",
     "Sombra",
     "TMDB"
   ]
